[package]
name = "rust-searchable-pke"
version = "0.1.0"
authors = ["Sora Suegami"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paired = "0.22.0"
groupy = "0.4.1"
thiserror = "1.0.37"
fff = "0.3.1"
rand_core = "0.5.1"
digest = { version = "0.9.0", features = ["std"] }
sha2 = "0.9.0"
ec-gpu-gen = "0.4.0"
itertools = "0.10.5"
rayon = "1.5.3"
c_vec = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
errno = {version = "0.2.8", optional = true}
rand = "0.7.0"
multiset = "0.0.5"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
rand_xorshift = "0.2"

[build-dependencies]
libtool = {version = "0.1", optional = true}

[lib]
crate-type = ["rlib","cdylib","staticlib"]

[features]
default = ["c_api","la"]
c_api = ["errno"]
la = ["libtool"]